--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
         <title>Tic Tac Toe</title>
     </head>
     <body>
-        
+        <div class="container">
+            <div class="gameplay-box">
+                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
+                    <img src="asset_cross_animation.svg" class="cross_animation">
+                </div>
+            </div>
+        </div>
+        <script src="./main.js"></script>
     </body>
+</html>
