--- a/index.html
+++ b/index.html
@@ -12,7 +12,37 @@
                 <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
                     <img src="asset_cross_animation.svg" class="cross_animation">
                 </div>
+                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
+                    <img src="asset_cross_animation.svg" class="cross_animation">
+                </div>
+                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
+                    <img src="asset_cross_animation.svg" class="cross_animation">
+                </div>
+                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
+                    <img src="asset_cross_animation.svg" class="cross_animation">
+                </div>
+                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
+                    <img src="asset_cross_animation.svg" class="cross_animation">
+                </div>
+                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
+                    <img src="asset_cross_animation.svg" class="cross_animation">
+                </div>
+                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
+                    <img src="asset_cross_animation.svg" class="cross_animation">
+                </div>
+                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
+                    <img src="asset_cross_animation.svg" class="cross_animation">
+                </div>
+                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
+                    <img src="asset_cross_animation.svg" class="cross_animation">
+                </div>
             </div>
+            <div class="result-block menu-block">Result</div>
+            <div class="game-name-block menu-block">Tic Tac Toe</div>
+            <button class="restart-block">
+                <img src="restart_icon.svg" class="restart-icon">
+                Restart
+            </button>
         </div>
         <script src="./main.js"></script>
     </body>
