--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
     <body>
         <div class="container">
             <div class="gameplay-box">
-                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
-                    <img src="asset_cross_animation.svg" class="cross_animation">
-                </div>
-                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
-                    <img src="asset_cross_animation.svg" class="cross_animation">
-                </div>
-                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
-                    <img src="asset_cross_animation.svg" class="cross_animation">
-                </div>
-                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
-                    <img src="asset_cross_animation.svg" class="cross_animation">
-                </div>
-                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
-                    <img src="asset_cross_animation.svg" class="cross_animation">
-                </div>
-                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
-                    <img src="asset_cross_animation.svg" class="cross_animation">
-                </div>
-                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
-                    <img src="asset_cross_animation.svg" class="cross_animation">
-                </div>
-                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
-                    <img src="asset_cross_animation.svg" class="cross_animation">
-                </div>
-                <div class="gameplay-box__grid-elem gameplay-box__cross gameplay-box__zero">
-                    <img src="asset_cross_animation.svg" class="cross_animation">
-                </div>
+                <button class="gameplay-box__grid-elem">
+                    <div class="animation"></div>
+                </button>
+                <button class="gameplay-box__grid-elem">
+                    <div class="animation"></div>
+                </button>
+                <button class="gameplay-box__grid-elem">
+                    <div class="animation"></div>
+                </button>
+                <button class="gameplay-box__grid-elem">
+                    <div class="animation"></div>
+                </button>
+                <button class="gameplay-box__grid-elem">
+                    <div class="animation"></div>
+                </button>
+                <button class="gameplay-box__grid-elem">
+                    <div class="animation"></div>
+                </button>
+                <button class="gameplay-box__grid-elem">
+                    <div class="animation"></div>
+                </button>
+                <button class="gameplay-box__grid-elem">
+                    <div class="animation"></div>
+                </button>
+                <button class="gameplay-box__grid-elem">
+                    <div class="animation"></div>
+                </button>
             </div>
             <div class="result-block menu-block">Result</div>
             <div class="game-name-block menu-block">Tic Tac Toe</div>
