--- a/index.html
+++ b/index.html
@@ -9,40 +9,42 @@
     <body>
         <div class="container">
             <div class="gameplay-box">
-                <button class="gameplay-box__grid-elem">
+                <button class="gameplay-box__grid-elem grid-elem1">
                     <div class="animation"></div>
                 </button>
-                <button class="gameplay-box__grid-elem">
+                <button class="gameplay-box__grid-elem grid-elem2">
                     <div class="animation"></div>
                 </button>
-                <button class="gameplay-box__grid-elem">
+                <button class="gameplay-box__grid-elem grid-elem3">
                     <div class="animation"></div>
                 </button>
-                <button class="gameplay-box__grid-elem">
+                <button class="gameplay-box__grid-elem grid-elem4">
                     <div class="animation"></div>
                 </button>
-                <button class="gameplay-box__grid-elem">
+                <button class="gameplay-box__grid-elem grid-elem5">
                     <div class="animation"></div>
                 </button>
-                <button class="gameplay-box__grid-elem">
+                <button class="gameplay-box__grid-elem grid-elem6">
                     <div class="animation"></div>
                 </button>
-                <button class="gameplay-box__grid-elem">
+                <button class="gameplay-box__grid-elem grid-elem7">
                     <div class="animation"></div>
                 </button>
-                <button class="gameplay-box__grid-elem">
+                <button class="gameplay-box__grid-elem grid-elem8">
                     <div class="animation"></div>
                 </button>
-                <button class="gameplay-box__grid-elem">
+                <button class="gameplay-box__grid-elem grid-elem9">
                     <div class="animation"></div>
                 </button>
             </div>
             <div class="result-block menu-block">Result</div>
-            <div class="game-name-block menu-block">Tic Tac Toe</div>
-            <button class="restart-block">
-                <img src="restart_icon.svg" class="restart-icon">
-                Restart
-            </button>
+            <div class="game-header-block menu-block">
+                <div class="game-name-block">Tic Tac Toe</div>
+                <button class="restart-block">
+                    <img src="restart_icon.svg" class="restart-icon">
+                    Restart
+                </button>
+            </div>    
         </div>
         <script src="./main.js"></script>
     </body>
